# autotyper

./: README.md  decode.py  encode.py  encode_mac.py  hello.py  main.py  pyproject.toml
