[project]
name = "emulate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.15.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "pyperclip>=1.9.0",
    "tqdm>=4.67.1",
]

[tool.mypy]
strict = true
disallow_untyped_calls = false
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = false
warn_unused_ignores = false
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "pynput.*",
    "pyperclip.*",
    "pyautogui.*",
    "tqdm.*"
]
ignore_missing_imports = true